# smart-janitor

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/smart_janitor/: __init__.py  cli.py  core.py  io.py  models.py  reporting.py  rules.yaml
tests/: test_cli.py  test_core.py  test_io.py  test_models.py  test_reporting.py
tests/fixtures/: invalid_negative_age.yaml  invalid_schema.yaml  invalid_unknown_type.yaml  invalid_yaml_syntax.yaml  valid_basic.yaml  valid_minimal.yaml
